<resources>
    <!--Basic-->
    <string name="app_name">EMS PionEnergia</string>
    <string name="show_all">Show all</string>
    <string name="next_quote">Next quote</string>
    <!-- Login-->
    <string name="login_hint">Login</string>
    <string name="password_hint">Password</string>
    <string name="remember">Remember me</string>
    <string name="forgot">Forgot your password?</string>
    <string name="resetPassword">Reset password</string>
    <string name="goBack">Go back to login screen</string>
    <string name="FailedToConnect">Failed to connect: </string>
    <string name="messageTitle">Error</string>
    <string name="connectiontimeout">Connection timeout</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!--  Drawer   -->
    <string name="opendrawer">Open drawer</string>
    <string name="closeddrawer">Close drawer</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="Contracts">Umowy</string>
    <string name="Sell_Invoices">Faktury sprzedażowe</string>
    <string name="Cost_Invoices">Faktury kosztowe</string>
    <string name="Cost_Invoice">Faktura kosztowa</string>
    <string name="SuplierNumber"> Numer umowy dostawcy: </string>
    <string name="Number">Numer: </string>
    <string name="Recipient">Odbiorca: </string>
    <string name="Title">Tytuł: </string>
    <string name="Date">Data zakończenia umowy: </string>
    <string name="Contractor">Kontrahent: </string>
    <string name="IssueDate">Data wystawienia: </string>
    <string name="GrossAmount">Kwota brutto: </string>
    <!-- Cost invoice hints  -->
    <string name="ForeignNumber_hint">Numer obcy faktury</string>
    <string name="IssueDate_hint">Data wystawienia</string>
    <string name="Contractor_hint">Kontrahent</string>
    <string name="Author_hint">Wprowadził</string>
    <string name="PaymentDate_hint">Termin płatności</string>
    <string name="InvoicePaid_hint">Faktura opłacona</string>
    <string name="NetTotal_hint">Kwota netto</string>
    <string name="VatTotal_hint">Kwota vat</string>
    <string name="GrossTotal_hint">Kwota brutto</string>
    <string name="Sum_hint">Suma</string>
    <string name="Comment_hint">Uwagi</string>
    <string name="Attachments_hint">Załączniki</string>
    <string name="Name_hint">Nazwa:</string>
    <string name="Size_hint">Rozmiar:</string>
    <string name="Date_hint">Data:</string>


    <string name="menu_slideshow">Slideshow</string>
    <string name="Contacts">Contacts</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="details">Details</string>

    <string name="contact">Contact</string>
    <string name="activities">Activities</string>
    <string name="contractors">Contractors</string>
    <string name="contactPerson">Osoba kontaktowa</string>
    <string name="documents">Documents</string>
    <string name="calendar">Calendar</string>
    <string name="service">Service</string>
    <string name="serviceOrder">Services</string>
    <string name="statistics">Realization statistics</string>
    <string name="title_activity_navigation_drawer_n">NavigationDrawerN</string>
    <string name="title_activity_navigation_drawer_nactivity">NavigationDrawerNActivity</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="title_activity_cost_invoice_attachments">CostInvoiceAttachments</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="Name">Nazwa</string>
    <string name="Name_and_Surname">Imię i Nazwisko</string>
    <string name="Name1">Imię</string>
    <string name="Surname">Nazwisko</string>
    <string name="Name_or_Surname">Imię lub Nazwisko</string>
    <string name="State">Status</string>
    <string name="Number_just">Numer</string>
    <string name="Date_From">Data od</string>
    <string name="Date_To">Data do</string>
    <string name="Title_just">Tytuł</string>
    <string name="Description">Opis</string>
    <string name="Supplier">Dostawca</string>
    <string name="Recipient_hint">Odbiorca</string>
    <string name="Items_hint">Pozycje faktury</string>
    <string name="Name_of_service">Nazwa usługi/towaru</string>
    <string name="Ammount">Ilość</string>
    <string name="netTotal">Kwota netto:</string>
    <string name="VatStake">Stawka VAT:</string>
    <string name="Contract_Date">Data umowy:</string>
    <string name="Date_just">Data</string>
    <string name="Module_hint">Modół</string>

</resources>