<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgpic">


    <ImageView
        android:id="@+id/RP_logo_iV"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_background"
        android:stateListAnimator="@null"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/RP_Login_tI"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/login_hint"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RP_logo_iV"
        app:startIconDrawable="@drawable/outline_account_circle_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/RPF_LoginText_tI"
            android:layout_width="330dp"
            android:layout_height="60dp"
            android:stateListAnimator="@null"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/RPF_Restore_B"
        style="@style/MyButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:stateListAnimator="@null"
        android:clickable="true"
        android:text="@string/resetPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RP_Login_tI"
        android:visibility="visible"/>
    <TextView
        android:id="@+id/RPF_Forgot_tV"
        style="@style/MyTextStyle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/goBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>